fix some spacing

--- a/src/css/table-of-contents.scss
+++ b/src/css/table-of-contents.scss
@@ -3,7 +3,7 @@
 .table-of-contents {
   line-height: 2;
   font-size: 1rem;
-  padding-left: 2rem;
+  
   a:hover {
     @apply text-indigo-500;
     html[data-theme='dark'] & {
